--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="nav-item">
               <a href="#landing-page">
                 <img
-                  src="C:\Users\Mahantesh\Desktop\project1\portfolio-website-master\images\profile-pic.png"
+                  src="C:\Users\Mahantesh\Desktop\project1\myprofile\images\profile-pic.png"
                   alt="MAHANTESH"
                   class="profile-pic nav-link"
                 />
@@ -80,7 +80,7 @@
         <div class="container">
           <div class="about-img">
             <img
-              src="C:\Users\Mahantesh\Desktop\project1\portfolio-website-master\images\profile-pic.png"
+              src="C:\Users\Mahantesh\Desktop\project1\myprofile\images\profile-pic.png"
               alt="MAHANTESH"
               class="about-pic"
             />
